--- a/pom.xml
+++ b/pom.xml
@@ -27,5 +27,10 @@
       <version>0.4.0</version>
     </dependency>
     <!-- core, all, cassandra, hbase, berkeleyje, es, lucene, hazelcast, persistit -->
+    <dependency>
+      <groupId>com.thinkaurelius.faunus</groupId>
+      <artifactId>faunus</artifactId>
+      <version>0.4.0</version>
+    </dependency>
   </dependencies>
 </project>
